Remove handling for inside events from tab hack

The hack broke KeySequenceItem. I tried removing it entirely with
"activeFocus:true" of the root item but from my testing we still need this
reduced hack to go outside of the qquickwidget while tabbing around.
BUG:423080